[workspace]
resolver = "2"

members = [
    
    "aptos-move/e2e-move-tests",
]

exclude = ["crates/aptos-protos", "ecosystem/sf-indexer"]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "aptos-node",
    "consensus/safety-rules",
    "crates/aptos",
    "crates/aptos-faucet",
    "crates/aptos-keygen",
    "crates/aptos-rate-limiter",
    "crates/aptos-rosetta",
    "crates/transaction-emitter",
    "aptos-move/framework",
    "execution/db-bootstrapper",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

[profile.release]
debug = true
overflow-checks = true

[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
rocksdb = { git = 'https://github.com/aptos-labs/rust-rocksdb' }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
